update: first 10 pages - mostly related work
Signed-off-by: Adrian Matejov <ado.matejov@gmail.com>

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,4 +2,4 @@
 \addcontentsline{toc}{chapter}{Introduction} % rucne pridanie do obsahu
 \markboth{Introduction}{Introduction} % vyriesenie hlaviciek
 
-TODO introduction \cite{smernica}
+TODO introduction
