--- a/literature.bib
+++ b/literature.bib
@@ -3,58 +3,141 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
-@article{clanok,
-    title = 	{Názov článku z časopisu},
-    author =	{X. Autor1 and Y. Autor2},
-    journal = {Názov časopisu, ktorý článok uverejnil},
-    volume = {4},
-    number = {3},
-    year = {1900},
-    pages = {1-100},
+@incollection{bib:zhang2009image,
+	title={Image segmentation in the last 40 years},
+	author={Zhang, Yu-Jin},
+	booktitle={Encyclopedia of Information Science and Technology, Second Edition},
+	pages={1818--1823},
+	year={2009},
+	publisher={IGI Global}
 }
 
-@Book{kniha,
-    author ={X. Autor1 and Y. Autor2},
-    title =        {Názov knihy},
-    publisher =    {Vydavateľstvo},
-    year =         {1900},
+@article{bib:yuheng2017image,
+	title={Image Segmentation Algorithms Overview},
+	author={Yuheng, Song and Hao, Yan},
+	journal={arXiv preprint arXiv:1707.02051},
+	year={2017}
 }
 
-
-@techreport{technical_report,
-    author =	{X. Autor1 and Y. Autor2},
-    title= {Názov technickej správy},
-    year={June 1999},
-    institution = {Inštitút vydávajúci správu},
-    number = {TR123/1999}
+@article{bib:lecun1989backpropagation,
+	title={Backpropagation applied to handwritten zip code recognition},
+	author={LeCun, Yann and Boser, Bernhard and Denker, John S and Henderson, Donnie and Howard, Richard E and Hubbard, Wayne and Jackel, Lawrence D},
+	journal={Neural computation},
+	volume={1},
+	number={4},
+	pages={541--551},
+	year={1989},
+	publisher={MIT Press}
 }
 
-@inproceedings{clanok_na_konferencii,
-    author =	{X. Autor1 and Y. Autor2},
-    title = {Názov článku (väčšinou z konferencie)},
-    booktitle = {Názov zborníka (väčšinou názov konferencie spolu s ročníkom)},
-    year = {1900},
-    pages = {1-100},
-    url = {http://xxx.yyy.com},
-}    
-
-
-    
-@misc{smernica,
- title={Vnútorný predpis č. 12/2013,
-Smernica rektora {U}niverzity {K}omenského v {B}ratislave
-o základných náležitostiach záverečných prác, rigoróznych 
-prác a habilitačných prác, kontrole ich  originality, 
-uchovávaní a sprístupňovaní  na {U}niverzite {K}omenského v {B}ratislave},
- author={{Univerzita Komenského v Bratislave}},
- year={2013},
- note={\url{https://uniba.sk/fileadmin/ruk/legislativa/2013/Vp_2013_12.pdf}},
+@inproceedings{bib:matan1992multi,
+	title={Multi-digit recognition using a space displacement neural network},
+	author={Matan, Ofer and Burges, Christopher JC and LeCun, Yann and Denker, John S},
+	booktitle={Advances in neural information processing systems},
+	pages={488--495},
+	year={1992}
 }
 
-@Book{Oetiker2000,
-  author = 	 {Tobias Oetiker and Hubert Partl and Irene Hyna and Elisabeth Schlegl},
-  title = 	 {Nie príliš stručný úvod do systému LaTeX2e},
-  year = 	 {2002},
-  note = {Preklad Ján Buša ml. a st}
+@inproceedings{bib:krizhevsky2012imagenet,
+	title={Imagenet classification with deep convolutional neural networks},
+	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+	booktitle={Advances in neural information processing systems},
+	pages={1097--1105},
+	year={2012}
 }
 
+@inproceedings{bib:szegedy2015going,
+	title={Going deeper with convolutions},
+	author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={1--9},
+	year={2015}
+}
+
+@inproceedings{bib:he2016deep,
+	title={Deep residual learning for image recognition},
+	author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={770--778},
+	year={2016}
+}
+
+@inproceedings{bib:long2015fully,
+	title={Fully convolutional networks for semantic segmentation},
+	author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={3431--3440},
+	year={2015}
+}
+
+@article{bib:badrinarayanan2015segnet,
+	title={Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
+	author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
+	journal={arXiv preprint arXiv:1511.00561},
+	year={2015}
+}
+
+@article{bib:simonyan2014very,
+	title={Very deep convolutional networks for large-scale image recognition},
+	author={Simonyan, Karen and Zisserman, Andrew},
+	journal={arXiv preprint arXiv:1409.1556},
+	year={2014}
+}
+
+@inproceedings{bib:ronneberger2015u,
+	title={U-net: Convolutional networks for biomedical image segmentation},
+	author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	booktitle={International Conference on Medical image computing and computer-assisted intervention},
+	pages={234--241},
+	year={2015},
+	organization={Springer}
+}
+
+@misc{bib:semanticsegoveryears,
+	title = {{Semantic Segmentation using Fully Convolutional Networks over the years}},
+	howpublished = {\url{https://meetshah1995.github.io/semantic-segmentation/deep-learning/pytorch/visdom/2017/06/01/semantic-segmentation-over-the-years.html}},
+	note = {Accessed 2019-02-02},
+	author={Shah, Meet}
+}
+
+@inproceedings{bib:he2017mask,
+	title={Mask r-cnn},
+	author={He, Kaiming and Gkioxari, Georgia and Doll{\'a}r, Piotr and Girshick, Ross},
+	booktitle={Computer Vision (ICCV), 2017 IEEE International Conference on},
+	pages={2980--2988},
+	year={2017},
+	organization={IEEE}
+}
+
+@inproceedings{bib:girshick2014rich,
+	title={Rich feature hierarchies for accurate object detection and semantic segmentation},
+	author={Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={580--587},
+	year={2014}
+}
+
+@inproceedings{bib:girshick2015fast,
+	title={Fast r-cnn},
+	author={Girshick, Ross},
+	booktitle={Proceedings of the IEEE international conference on computer vision},
+	pages={1440--1448},
+	year={2015}
+}
+
+@inproceedings{bib:ren2015faster,
+	title={Faster r-cnn: Towards real-time object detection with region proposal networks},
+	author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+	booktitle={Advances in neural information processing systems},
+	pages={91--99},
+	year={2015}
+}
+
+@inproceedings{bib:teichmann2018multinet,
+	title={Multinet: Real-time joint semantic reasoning for autonomous driving},
+	author={Teichmann, Marvin and Weber, Michael and Zoellner, Marius and Cipolla, Roberto and Urtasun, Raquel},
+	booktitle={2018 IEEE Intelligent Vehicles Symposium (IV)},
+	pages={1013--1020},
+	year={2018},
+	organization={IEEE}
+}
