--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage{url}
+\usepackage{amsmath}
 \usepackage[hidelinks,breaklinks]{hyperref}
 %\usepackage[slovak]{babel} % vypnite pre prace v anglictine
 \linespread{1.25} % hodnota 1.25 by mala zodpovedat 1.5 riadkovaniu
@@ -37,7 +38,7 @@
 \begin{center}
 \sc\large
 Comenius University in Bratislava\\
-Fakulty of Mathematics, Physics and Informatics
+Faculty of Mathematics, Physics and Informatics
 
 \vfill
 
@@ -173,7 +174,15 @@ TODO: abstract in English
 
 \input introduction.tex 
 
-\input currentState.tex
+\input preliminaries.tex
+
+\input relatedWork.tex
+
+\input design.tex
+
+\input activeLearning.tex
+
+\input results.tex
 
 \input conclusion.tex
 
