--- a/literature.bib
+++ b/literature.bib
@@ -1,7 +1,3 @@
-@preamble{ "\newcommand{\noopsort}[1]{} "
-	# "\newcommand{\printfirst}[2]{#1} "
-	# "\newcommand{\singleletter}[1]{#1} "
-	# "\newcommand{\switchargs}[2]{#2#1} " }
 
 @incollection{bib:zhang2009image,
 	title={Image segmentation in the last 40 years},
@@ -13,14 +9,14 @@
 }
 
 @article{bib:yuheng2017image,
-	title={Image Segmentation Algorithms Overview},
+	title={{Image Segmentation Algorithms Overview}},
 	author={Yuheng, Song and Hao, Yan},
 	journal={arXiv preprint arXiv:1707.02051},
 	year={2017}
 }
 
 @article{bib:lecun1989backpropagation,
-	title={Backpropagation applied to handwritten zip code recognition},
+	title={{Backpropagation Applied to Handwritten Zip Code Recognition}},
 	author={LeCun, Yann and Boser, Bernhard and Denker, John S and Henderson, Donnie and Howard, Richard E and Hubbard, Wayne and Jackel, Lawrence D},
 	journal={Neural computation},
 	volume={1},
@@ -30,8 +26,31 @@
 	publisher={MIT Press}
 }
 
+@article{bib:lecun2010mnist,
+  title={MNIST handwritten digit database},
+  author={LeCun, Yann and Cortes, Corinna and Burges, CJ},
+  journal={ATT Labs [Online]. Available: \url{http://yann.lecun.com/exdb/mnist}},
+  volume={2},
+  year={2010}
+}
+
+@book{bib:goodfellow2016deep,
+  title={{Deep Learning}},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  year={2016},
+  publisher={MIT press}
+}
+
+@book{bib:sutton1998introduction,
+  title={{Introduction to Reinforcement Learning}},
+  author={Sutton, Richard S and Barto, Andrew G and others},
+  volume={135},
+  year={1998},
+  publisher={MIT press Cambridge}
+}
+
 @inproceedings{bib:matan1992multi,
-	title={Multi-digit recognition using a space displacement neural network},
+	title={{Multi-Digit Recognition Using A Space Displacement Neural Network}},
 	author={Matan, Ofer and Burges, Christopher JC and LeCun, Yann and Denker, John S},
 	booktitle={Advances in neural information processing systems},
 	pages={488--495},
@@ -39,15 +58,22 @@
 }
 
 @inproceedings{bib:krizhevsky2012imagenet,
-	title={Imagenet classification with deep convolutional neural networks},
+	title={{ImageNet Classification with Deep Convolutional Neural Networks}},
 	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
 	booktitle={Advances in neural information processing systems},
 	pages={1097--1105},
 	year={2012}
 }
 
+@article{bib:simonyan2014very,
+  title={{Very Deep Convolutional Networks for Large-scale Image Recognition}},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
 @inproceedings{bib:szegedy2015going,
-	title={Going deeper with convolutions},
+	title={{Going Deeper with Convolutions}},
 	author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
 	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
 	pages={1--9},
@@ -55,7 +81,7 @@
 }
 
 @inproceedings{bib:he2016deep,
-	title={Deep residual learning for image recognition},
+	title={{Deep Residual Learning for Image Recognition}},
 	author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
 	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
 	pages={770--778},
@@ -63,29 +89,26 @@
 }
 
 @inproceedings{bib:long2015fully,
-	title={Fully convolutional networks for semantic segmentation},
+	title={{Fully Convolutional Networks for Semantic Segmentation}},
 	author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
 	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
 	pages={3431--3440},
 	year={2015}
 }
 
-@article{bib:badrinarayanan2015segnet,
-	title={Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
-	author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
-	journal={arXiv preprint arXiv:1511.00561},
-	year={2015}
-}
-
-@article{bib:simonyan2014very,
-	title={Very deep convolutional networks for large-scale image recognition},
-	author={Simonyan, Karen and Zisserman, Andrew},
-	journal={arXiv preprint arXiv:1409.1556},
-	year={2014}
+@article{bib:badrinarayanan2017segnet,
+  title={{SegNet: A Deep Convolutional Encoder-Decoder Architecture for Image Segmentation}},
+  author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={39},
+  number={12},
+  pages={2481--2495},
+  year={2017},
+  publisher={IEEE}
 }
 
 @inproceedings{bib:ronneberger2015u,
-	title={U-net: Convolutional networks for biomedical image segmentation},
+	title={{U-Net: Convolutional Networks for Biomedical Image Segmentation}},
 	author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
 	booktitle={International Conference on Medical image computing and computer-assisted intervention},
 	pages={234--241},
@@ -101,12 +124,11 @@
 }
 
 @inproceedings{bib:he2017mask,
-	title={Mask r-cnn},
+	title={{Mask R-CNN}},
 	author={He, Kaiming and Gkioxari, Georgia and Doll{\'a}r, Piotr and Girshick, Ross},
-	booktitle={Computer Vision (ICCV), 2017 IEEE International Conference on},
-	pages={2980--2988},
-	year={2017},
-	organization={IEEE}
+	booktitle={Proceedings of the IEEE international conference on computer vision},
+    pages={2961--2969},
+    year={2017},
 }
 
 @inproceedings{bib:girshick2014rich,
@@ -118,7 +140,7 @@
 }
 
 @inproceedings{bib:girshick2015fast,
-	title={Fast r-cnn},
+	title={{Fast R-CNN}},
 	author={Girshick, Ross},
 	booktitle={Proceedings of the IEEE international conference on computer vision},
 	pages={1440--1448},
@@ -126,18 +148,466 @@
 }
 
 @inproceedings{bib:ren2015faster,
-	title={Faster r-cnn: Towards real-time object detection with region proposal networks},
+	title={{Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks}},
 	author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
 	booktitle={Advances in neural information processing systems},
 	pages={91--99},
 	year={2015}
 }
 
-@inproceedings{bib:teichmann2018multinet,
-	title={Multinet: Real-time joint semantic reasoning for autonomous driving},
-	author={Teichmann, Marvin and Weber, Michael and Zoellner, Marius and Cipolla, Roberto and Urtasun, Raquel},
-	booktitle={2018 IEEE Intelligent Vehicles Symposium (IV)},
-	pages={1013--1020},
-	year={2018},
-	organization={IEEE}
+@article{bib:teichmann2018multinet,
+  title={{MultiNet: Real-time Joint Semantic Reasoning for Autonomous Driving}},
+  author={Teichmann, Marvin and Weber, Michael and Zoellner, Marius and Cipolla, Roberto and Urtasun, Raquel},
+  journal={arXiv preprint arXiv:1612.07695},
+  year={2016}
+}
+
+@inproceedings{bib:Geiger2012CVPR,
+  author = {Andreas Geiger and Philip Lenz and Raquel Urtasun},
+  title = {{Are we ready for Autonomous Driving? The KITTI Vision Benchmark Suite}},
+  booktitle = {Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year = {2012}
+} 
+
+@misc{bib:cnncs231n,
+	title = {{CS231n: Convolutional Neural Networks for Visual Recognition}},
+	howpublished = {\url{http://cs231n.github.io/}},
+	note = {Accessed 2018-02-02},
+	author={Li, Fei-Fei and Karpathy, Andrej and Johnson, Justin}
+}
+
+@inproceedings{bib:scherer2010evaluation,
+  title={Evaluation of Pooling Operations in Convolutional Architectures for Object Recognition},
+  author={Scherer, Dominik and M{\"u}ller, Andreas and Behnke, Sven},
+  booktitle={International conference on artificial neural networks},
+  pages={92--101},
+  year={2010},
+  organization={Springer}
+}
+
+@MastersThesis{bib:nadhajsky2011,
+    author={Nadhajský, Miroslav},
+    title={{Robotour}},
+    school={Faculty of Mathematics, Physics and Informatics, Comenius University in Bratislava},
+    address={Slovakia},
+    year={2011}
+}
+
+@MastersThesis{bib:moravcik2013,
+    author={Moravčík, Michal},
+    title={{Autonomous  mobile  robot  for Robotour contest}},
+    school={Faculty of Mathematics, Physics and Informatics, Comenius University in Bratislava},
+    address={Slovakia},
+    year={2013}
+}
+
+@MastersThesis{bib:duc2017,
+    author={Dúc, Jozef},
+    title={{Robotour with Laser Range Sensor}},
+    school={Faculty of Mathematics, Physics and Informatics, Comenius University in Bratislava},
+    address={Slovakia},
+    year={2017}
+}
+
+@MastersThesis{bib:fikar2019,
+    author={Fikar, Michal},
+    title={{Local map for a robot for the Robotour contest}},
+    school={Faculty of Mathematics, Physics and Informatics, Comenius University in Bratislava},
+    address={Slovakia},
+    year={2019}
+}
+
+@inproceedings{bib:suppajariabka2017,
+	title={{Single Camera Path Detection for Outdoor Navigation}},
+	author={Jariabka, Ondrej and Šuppa, Marek and Rudolf, Ondrej},
+	booktitle={Proceedings of CESCG 2017: The 21st Central European Seminar on Computer Graphics},
+	organization={CESCG},
+	year={2017}
+}
+
+@misc{bib:imgaug,
+  author = {Jung, Alexander B.
+            and Wada, Kentaro
+            and Crall, Jon
+            and Tanaka, Satoshi
+            and Graving, Jake
+            and Yadav, Sarthak
+            and Banerjee, Joy
+            and Vecsei, Gábor
+            and Kraft, Adam
+            and Borovec, Jirka
+            and Vallentin, Christian
+            and Zhydenko, Semen
+            and Pfeiffer, Kilian
+            and Cook, Ben
+            and Fernández, Ismael
+            and Weng Chi-Hung
+            and Ayala-Acevedo, Abner
+            and Meudec, Raphael
+            and Laporte, Matias
+            and others},
+  title = {{imgaug}},
+  howpublished = {\url{https://github.com/aleju/imgaug}},
+  year = {2019},
+  note = {Accessed 2019-01-22},
+}
+
+@inproceedings{bib:deng2009imagenet,
+  title={{ImageNet: A Large-Scale Hierarchical Image Database}},
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Li, Fei-Fei},
+  booktitle={2009 IEEE conference on computer vision and pattern recognition},
+  pages={248--255},
+  year={2009},
+  organization={IEEE}
+}
+
+@misc{bib:chollet2015keras,
+  title={Keras},
+  author={Chollet, Fran\c{c}ois and others},
+  year={2015},
+  howpublished={\url{https://keras.io}},
+}
+
+@misc{bib:tensorflow2015,
+  title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+  url={https://www.tensorflow.org/},
+  note={Software available from tensorflow.org},
+  author={Mart\'{\i}n~Abadi and others},
+  year={2015},
+}
+
+@inproceedings{bib:zeiler2014visualizing,
+  title={{Visualizing and Understanding Convolutional Networks}},
+  author={Zeiler, Matthew D and Fergus, Rob},
+  booktitle={European conference on computer vision},
+  pages={818--833},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{bib:zhang2018shufflenet,
+  title={{ShuffleNet: An Extremely Efficient Convolutional Neural Network for Mobile Devices}},
+  author={Zhang, Xiangyu and Zhou, Xinyu and Lin, Mengxiao and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={6848--6856},
+  year={2018}
+}
+
+@inproceedings{bib:turkmen2019efficient,
+  title={An efficient solution for semantic segmentation: {ShuffleNet V2} with atrous separable convolutions},
+  author={T{\"u}rkmen, Sercan and Heikkil{\"a}, Janne},
+  booktitle={Scandinavian Conference on Image Analysis},
+  pages={41--53},
+  year={2019},
+  organization={Springer}
+}
+
+@inproceedings{bib:ma2018shufflenet,
+  title={{ShuffleNet V2: Practical Guidelines for Efficient CNN Architecture Design}},
+  author={Ma, Ningning and Zhang, Xiangyu and Zheng, Hai-Tao and Sun, Jian},
+  booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},
+  pages={116--131},
+  year={2018}
+}
+
+@article{bib:gamal2018shuffleseg,
+  title={{ShuffleSeg: Real-time Semantic Segmentation Network}},
+  author={Gamal, Mostafa and Siam, Mennatullah and Abdel-Razek, Moemen},
+  journal={arXiv preprint arXiv:1803.03816},
+  year={2018}
+}
+
+@InProceedings{bib:Siam_2018_CVPR_Workshops,
+  author = {Siam, Mennatullah and Gamal, Mostafa and Abdel-Razek, Moemen and Yogamani, Senthil and Jagersand, Martin and Zhang, Hong},
+  title = {{A Comparative Study of Real-Time Semantic Segmentation for Autonomous Driving}},
+  booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops},
+  month = {June},
+  year = {2018}
+}
+
+@article{bib:yu2015multi,
+  title={{Multi-Scale Context Aggregation by Dilated Convolutions}},
+  author={Yu, Fisher and Koltun, Vladlen},
+  journal={arXiv preprint arXiv:1511.07122},
+  year={2015}
+}
+
+@inproceedings{bib:chen2018searching,
+  title={{Searching for Efficient Multi-Scale Architectures for Dense Image Prediction}},
+  author={Chen, Liang-Chieh and Collins, Maxwell and Zhu, Yukun and Papandreou, George and Zoph, Barret and Schroff, Florian and Adam, Hartwig and Shlens, Jon},
+  booktitle={Advances in neural information processing systems},
+  pages={8699--8710},
+  year={2018}
+}
+
+@article{bib:chen2017rethinking,
+  title={{Rethinking Atrous Convolution for Semantic Image Segmentation}},
+  author={Chen, Liang-Chieh and Papandreou, George and Schroff, Florian and Adam, Hartwig},
+  journal={arXiv preprint arXiv:1706.05587},
+  year={2017}
+}
+
+@inproceedings{bib:chen2018encoder,
+  title={{Encoder-Decoder with Atrous Separable Convolution for Semantic Image Segmentation}},
+  author={Chen, Liang-Chieh and Zhu, Yukun and Papandreou, George and Schroff, Florian and Adam, Hartwig},
+  booktitle={Proceedings of the European conference on computer vision (ECCV)},
+  pages={801--818},
+  year={2018}
+}
+
+@inproceedings{bib:sandler2018mobilenetv2,
+  title={{MobileNetV2: Inverted Residuals and Linear Bottlenecks}},
+  author={Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={4510--4520},
+  year={2018}
+}
+
+@article{bib:howard2017mobilenets,
+  title={{MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications}},
+  author={Howard, Andrew G and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
+  journal={arXiv preprint arXiv:1704.04861},
+  year={2017}
+}
+
+@inproceedings{bib:howard2019searching,
+  title={{Searching for MobileNetV3}},
+  author={Howard, Andrew and Sandler, Mark and Chu, Grace and Chen, Liang-Chieh and Chen, Bo and Tan, Mingxing and Wang, Weijun and Zhu, Yukun and Pang, Ruoming and Vasudevan, Vijay and others},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={1314--1324},
+  year={2019}
+}
+
+@inproceedings{bib:quigley2009ros,
+  title={{ROS: an open-source Robot Operating System}},
+  author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y},
+  booktitle={ICRA workshop on open source software},
+  volume={3},
+  number={3.2},
+  pages={5},
+  year={2009},
+  organization={Kobe, Japan}
+}
+
+@article{bib:ioffe2015batch,
+  title={{Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}},
+  author={Ioffe, Sergey and Szegedy, Christian},
+  journal={arXiv preprint arXiv:1502.03167},
+  year={2015}
+}
+
+@article{bib:everingham2010pascal,
+  title={{The Pascal Visual Object Classes (VOC) Challenge}},
+  author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
+  journal={International journal of computer vision},
+  volume={88},
+  number={2},
+  pages={303--338},
+  year={2010},
+  publisher={Springer}
+}
+
+@inproceedings{bib:tan2019mnasnet,
+  title={{MnasNet: Platform-Aware Neural Architecture Search for Mobile}},
+  author={Tan, Mingxing and Chen, Bo and Pang, Ruoming and Vasudevan, Vijay and Sandler, Mark and Howard, Andrew and Le, Quoc V},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={2820--2828},
+  year={2019}
+}
+
+@inproceedings{bib:cordts2016cityscapes,
+  title={{The Cityscapes Dataset for Semantic Urban Scene Understanding}},
+  author={Cordts, Marius and Omran, Mohamed and Ramos, Sebastian and Rehfeld, Timo and Enzweiler, Markus and Benenson, Rodrigo and Franke, Uwe and Roth, Stefan and Schiele, Bernt},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3213--3223},
+  year={2016}
+}
+
+
+% active learning
+@article{bib:sener2017active,
+  title={{Active Learning for Convolutional Neural Networks: A Core-Set Approach}},
+  author={Sener, Ozan and Savarese, Silvio},
+  journal={arXiv preprint arXiv:1708.00489},
+  year={2017}
+}
+
+@article{bib:wang2016cost,
+  title={{Cost-Effective Active Learning for Deep Image Classification}},
+  author={Wang, Keze and Zhang, Dongyu and Li, Ya and Zhang, Ruimao and Lin, Liang},
+  journal={IEEE Transactions on Circuits and Systems for Video Technology},
+  volume={27},
+  number={12},
+  pages={2591--2600},
+  year={2016},
+  publisher={IEEE}
+}
+
+@inproceedings{bib:gal2017deep,
+  title={{Deep Bayesian Active Learning with Image Data}},
+  author={Gal, Yarin and Islam, Riashat and Ghahramani, Zoubin},
+  booktitle={Proceedings of the 34th International Conference on Machine Learning},
+  volume={70},
+  pages={1183--1192},
+  year={2017},
+  organization={JMLR. org}
+}
+
+@techreport{bib:settles2009active,
+  title={{Active Learning Literature Survey}},
+  author={Settles, Burr},
+  year={2009},
+  institution={University of Wisconsin-Madison Department of Computer Sciences}
+}
+
+@article{bib:zhdanov2019diverse,
+  title={{Diverse mini-batch Active Learning}},
+  author={Zhdanov, Fedor},
+  journal={arXiv preprint arXiv:1901.05954},
+  year={2019}
+}
+
+@inproceedings{bib:vezhnevets2012active,
+  title={{Active Learning for Semantic Segmentation with Expected Change}},
+  author={Vezhnevets, Alexander and Buhmann, Joachim M and Ferrari, Vittorio},
+  booktitle={2012 IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3162--3169},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{bib:joshi2009multi,
+  title={{Multi-Class Active Learning for Image Classification}},
+  author={Joshi, Ajay J and Porikli, Fatih and Papanikolopoulos, Nikolaos},
+  booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={2372--2379},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{bib:yang2017suggestive,
+  title={{Suggestive Annotation: A Deep Active Learning Framework for Biomedical Image Segmentation}},
+  author={Yang, Lin and Zhang, Yizhe and Chen, Jianxu and Zhang, Siyuan and Chen, Danny Z},
+  booktitle={International conference on medical image computing and computer-assisted intervention},
+  pages={399--407},
+  year={2017},
+  organization={Springer}
+}
+
+@article{bib:mackowiak2018cereals,
+  title={CEREALS - Cost-Effective REgion-based Active Learning for Semantic Segmentation},
+  author={Mackowiak, Radek and Lenz, Philip and Ghori, Omair and Diego, Ferran and Lange, Oliver and Rother, Carsten},
+  journal={arXiv preprint arXiv:1810.09726},
+  year={2018}
+}
+
+@MastersThesis{bib:sorsater2018,
+    author={Sörsäter, Michael},
+    title={{Active Learning for Road Segmentation using Convolutional Neural Networks}},
+    school={Linköping University in Linköping},
+    address={Sweden},
+    year={2018}
+}
+
+@article{bib:mcinnes2018umap,
+    author={{McInnes}, Leland and Healy, John and Melville, James},
+    title={{UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction}},
+    journal={arXiv preprint arXiv:1802.03426},
+    year=2018,
+    month=feb,
+}
+
+@article{bib:mcinnes2018umap-software,
+  title={{UMAP: Uniform Manifold Approximation and Projection}},
+  author={McInnes, Leland and Healy, John and Saul, Nathaniel and Grossberger, Lukas},
+  journal={The Journal of Open Source Software},
+  volume={3},
+  number={29},
+  pages={861},
+  year={2018}
+}
+
+@article{bib:maaten2008visualizing,
+  title={{Visualizing Data using t-SNE}},
+  author={Maaten, Laurens van der and Hinton, Geoffrey},
+  journal={Journal of machine learning research},
+  volume={9},
+  number={Nov},
+  pages={2579--2605},
+  year={2008}
+}
+
+@article{bib:pedregosa2011scikit,
+  title={{Scikit-learn: Machine Learning in Python}},
+  author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
+  journal={{the Journal of Machine Learning Research}},
+  volume={12},
+  pages={2825--2830},
+  year={2011},
+  publisher={JMLR. org}
+}
+
+@incollection{bib:chen2019unsupervised,
+  title = {{Unsupervised Object Segmentation by Redrawing}},
+  author = {Chen, Micka\"{e}l and Arti\`{e}res, Thierry and Denoyer, Ludovic},
+  booktitle = {Advances in Neural Information Processing Systems 32},
+  editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+  pages = {12726--12737},
+  year = {2019},
+  publisher = {Curran Associates, Inc.},
+}
+
+@incollection{bib:nguyen2019deepusps,
+  title = {{DeepUSPS: Deep Robust Unsupervised Saliency Prediction via Self-supervision}},
+  author = {Nguyen, Tam and Dax, Maximilian and Mummadi, Chaithanya Kumar and Ngo, Nhung and Nguyen, Thi Hoai Phuong and Lou, Zhongyu and Brox, Thomas},
+  booktitle = {Advances in Neural Information Processing Systems 32},
+  editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+  pages = {204--214},
+  year = {2019},
+  publisher = {Curran Associates, Inc.},
+}
+
+@incollection{bib:bielski2019emergence,
+  title = {{Emergence of Object Segmentation in Perturbed Generative Models}},
+  author = {Bielski, Adam and Favaro, Paolo},
+  booktitle = {Advances in Neural Information Processing Systems 32},
+  editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+  pages = {7256--7266},
+  year = {2019},
+  publisher = {Curran Associates, Inc.},
+}
+
+@inproceedings{bib:maas2013rectifier,
+  title={{Rectifier Nonlinearities Improve Neural Network Acoustic Models}},
+  author={Maas, Andrew L and Hannun, Awni Y and Ng, Andrew Y},
+  booktitle={Proceedings of the 30th International Conference on Machine Learning},
+  volume={30},
+  number={1},
+  pages={3},
+  year={2013}
+}
+
+@inproceedings{bib:he2015delving,
+  title={{Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification}},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={{Proceedings of the IEEE international conference on computer vision}},
+  pages={1026--1034},
+  year={2015}
+}
+
+@article{bib:nesterov1983convex,
+    author={Nesterov, Yurii},
+    title={{A method of solving a convex programming problem with convergence $O(1/k^2)$}},
+    journal={Soviet Mathematics Doklady},
+    volume={27},
+    number={2},
+    pages={372--376},
+    year={1983}
+}
+
+@article{bib:kingma2014adam,
+  title={{Adam: A Method for Stochastic Optimization}},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
 }
